<resources>
    <string name="app_name">Sketchbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Made by Dominik Kriz</string>
    <string name="nav_header_subtitle">kriz.dominik13@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Sketchbook</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="erase_all_layers">Erase All Layers</string>
    <string name="erase_current_layer">Erase Current Layer</string>
    <string name="upper_layer">Upper Layer</string>
    <string name="middle_layer">Middle Layer</string>
    <string name="lower_layer">Lower Layer</string>
    <string name="brush_size">Brush size</string>
    <string name="brush_color">Brush color</string>
    <string name="brush_properties">Brush Properties</string>
    <string name="layers">Layers</string>
    <string name="eraser_tools">Eraser tools</string>
    <string name="redo">Redo</string>
    <string name="action_save">Save image</string>
    <string name="undo">Undo</string>
    <string name="bruhs_mode">Bruhs mode</string>
    <string name="default_size">5</string>
    <string name="portrait_mode">Portrait mode</string>
    <string name="landscape_mode">Landscape mode</string>
    <string name="layout_change">Layout change</string>
</resources>
