<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/layers">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/upper_layer"
                    android:title="@string/upper_layer" />
                <item
                    android:id="@+id/middle_layer"
                    android:title="@string/middle_layer" />
                <item
                    android:id="@+id/lower_layer"
                    android:title="@string/lower_layer" />
            </group>
        </menu>
    </item>

    <item android:title="@string/brush_properties">
        <menu>
            <item
                android:id="@+id/brush_size"
                android:title="@string/brush_size" />
            <item
                android:id="@+id/brush_color"
                android:title="@string/brush_color" />
            <item
                android:id="@+id/brush_mode"
                android:title="@string/bruhs_mode" />
        </menu>
    </item>

    <item android:title="@string/eraser_tools">
        <menu>
            <item
                android:id="@+id/erase_layer"
                android:title="@string/erase_current_layer" />
            <item
                android:id="@+id/erase_all"
                android:title="@string/erase_all_layers" />
        </menu>
    </item>
</menu>
